--- a/.github/workflows/dep-check.yaml
+++ b/.github/workflows/dep-check.yaml
@@ -11,4 +11,4 @@ jobs:
       - uses: DeLaGuardo/setup-clojure@master
         with:
           lein: 2.9.4
-      - run: lein ancient
+      - run: cd server && lein ancient
