--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -7,5 +7,5 @@ jobs:
       - uses: actions/checkout@v1
       - uses: DeLaGuardo/clojure-lint-action@master
         with:
-          clj-kondo-args: --lint src --config '{:output {:pattern "::{{level}} file={{filename}},line={{row}},col={{col}}::{{message}}"}}'
+          clj-kondo-args: --lint server/src --config '{:output {:pattern "::{{level}} file={{filename}},line={{row}},col={{col}}::{{message}}"}}'
           github_token: ${{ secrets.GITHUB_TOKEN }}
