--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "@ezand/docker-discovery-dashboard",
-  "version": "0.0.1",
+  "name": "@coreui/coreui-free-react-admin-template",
+  "version": "3.2.0",
   "description": "CoreUI React Open Source Bootstrap 4 Admin Template",
   "author": {
-    "name": "Eirik Stenersen Sand",
-    "url": "https://github.com/ezand/docker-discovery",
-    "github": "https://github.com/ezand/docker-discovery"
+    "name": "CoreUI",
+    "url": "https://coreui.io",
+    "github": "https://github.com/coreui",
+    "twitter": "https://twitter.com/core_ui"
   },
   "contributors": [
     {
-      "name": "Eirik Sand",
-      "url": "https://github.com/ezand/docker-discovery"
+      "name": "CoreUI Team",
+      "url": "https://github.com/orgs/coreui/people"
     }
   ],
   "homepage": ".",
-  "copyright": "Copyright 2021 Eirik Stenersen Sand",
+  "copyright": "Copyright 2017-2020 creativeLabs Łukasz Holeczek",
   "license": "MIT",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git@github.com:ezand/docker-discovery"
+    "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
   },
   "dependencies": {
     "@coreui/chartjs": "^2.0.0",
@@ -29,10 +30,10 @@
     "@coreui/react": "^3.4.0",
     "@coreui/react-chartjs": "^1.0.1",
     "@coreui/utils": "^1.3.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.3.2",
     "classnames": "^2.2.6",
     "core-js": "^3.8.1",
     "enzyme": "^3.11.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.3.2",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -44,10 +45,8 @@
   },
   "devDependencies": {
     "auto-changelog": "~2.2.1",
+    "jshint": "^2.12.0",
     "react-scripts": "^4.0.1"
-  },
-  "resolutions": {
-    "immer": "^8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,6 +56,9 @@
     "test:debug": "react-scripts --inspect-brk test --runInBand",
     "eject": "react-scripts eject",
     "changelog": "auto-changelog --starting-version 3.0.0 --commit-limit false --hide-credit"
+  },
+  "bugs": {
+    "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
   },
   "eslintConfig": {
     "extends": "react-app"
