--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -8,6 +8,7 @@
     "url": "github:ezand/docker-discovery"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
@@ -15,12 +16,16 @@
     "@types/node": "^14.14.28",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.1",
+    "@types/react-redux": "^7.1.16",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.2",
-    "rxbeach": "^0.8.4",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
+  },
+  "devDependencies": {
+    "@types/webpack-env": "^1.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
