--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -8,6 +8,13 @@
     "url": "github:ezand/docker-discovery"
   },
   "dependencies": {
+    "@coreui/chartjs": "^2.0.0",
+    "@coreui/coreui": "^3.4.0",
+    "@coreui/icons": "^1.0.1",
+    "@coreui/icons-react": "^1.0.2",
+    "@coreui/react": "^3.4.5",
+    "@coreui/react-chartjs": "^1.0.1",
+    "@coreui/utils": "^1.3.1",
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -20,6 +27,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
