--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -21,7 +21,9 @@
     "@testing-library/user-event": "^12.7.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-amazing-proxy": "^1.0.63",
     "react-dom": "^17.0.1",
+    "react-json-view": "^1.21.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
@@ -40,7 +42,7 @@
     "@types/webpack-env": "^1.16.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node node_modules/react-amazing-proxy/start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -62,6 +64,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:4000"
+  }
 }
